feat: P4ADEV-4436 parallelizing ingestionFlowFile rows processing